# gridit

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
gridit/: __init__.py  __main__.py  array_from.py  cell.py  classmethods.py  cli.py  display.py  file.py  grid.py  gridpolyconv.py  logger.py  modflow.py  spatial.py
src/gridit/: __init__.py  __main__.py  array_from.py  cell.py  classmethods.py  display.py  file.py  grid.py  gridpolyconv.py  modflow.py  spatial.py  specfile.py
tests/: common.py  conftest.py  test_array_from.py  test_cell.py  test_classmethods.py  test_cli.py  test_file.py  test_grid.py  test_gridpolyconv.py  test_modflow.py  test_spatial.py  test_specfile.py
tests/data/: 2m_temperature.grb.tif  Mana.tif  Mana_hk.tif  Mana_hk_nan.tif  Mana_polygons.dbf  Mana_polygons.prj  Mana_polygons.shp  Mana_polygons.shx  Mana_unset-nodata_nan.tif  Mana_unset-nodata_zeros.tif  nocrs.tif  pest.spc  points.csv  waitaku2.dbf  waitaku2.nc  waitaku2.shp  waitaku2.shx  waitaku2_points.dbf
tests/data/modflow/: h.nam  h6.dis  h6.dis.grb  h6.drn  h6.ic  h6.ims  h6.nam  h6.npf  h6.oc  h6.rch  mfsim.nam
