[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "gridit"
dynamic = ["version"]
authors = [
    {name = "Mike Taves", email = "mwtoews@gmail.com"},
]
description = "Spatial tools to translate raster or vector polygon data to regular grids"
readme = "README.md"
keywords = ["rasterize", "grid", "regular grid"]
license = {text = "BSD 3-Clause"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
optional = [
    "fiona",
    "flopy",
    "matplotlib",
    "netCDF4",
    "rasterio",
    "scipy",
    "shapely",
    "xarray",
]
test = [
    "pytest",
    "pytest-xdist",
]

[project.scripts]
gridit = "gridit.__main__:cli_main"

[project.urls]
Repository = "https://github.com/mwtoews/gridit"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.setuptools.packages.find]
include = [
    "gridit",
    "gridit.*",
]

[tool.setuptools_scm]
write_to = "gridit/_version.py"
