[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "gridit"
dynamic = ["version"]
authors = [
    {name = "Mike Taves", email = "mwtoews@gmail.com"},
]
description = "Spatial tools to translate raster or vector geometry data to regular grids"
readme = "README.md"
keywords = ["rasterize", "grid", "regular grid"]
license = {text = "BSD 3-Clause"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: GIS",
]
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
dev = ["gridit[test,optional]"]
optional = [
    "fiona",
    "flopy",
    "matplotlib",
    "netCDF4",
    "geopandas",
    "rasterio >=1.2.2",
    "scipy",
    "shapely",
    "xarray",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[project.scripts]
gridit = "gridit.__main__:cli_main"

[project.urls]
Repository = "https://github.com/mwtoews/gridit"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "gridit/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["gridit", "tests"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning:numexpr",
    "ignore:numpy.ndarray size changed:RuntimeWarning",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "UP",  # pyupgrade
    "I",  # isort
    "NPY",  # NumPy-specific
]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["D", "ANN"]
